fix contact page row gap

--- a/src/Styles/contact.css
+++ b/src/Styles/contact.css
@@ -46,6 +46,7 @@ form textarea {
   width: 100%;
   color: #534859;
   border: 1px solid #f9698d;
+  margin-bottom: 10px;
 }
 
 /* SEND BTN */
